# holidayapi-rust

./: Cargo.toml  README.md
.github/workflows/: test.yml
src/: lib.rs  prelude.rs  requests.rs  responses.rs
