[package]
name = "holidayapi-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.6.0"
tokio = { version = "1.21.1", features = ["full"] }
reqwest = "0.11"
strum = "0.24"
strum_macros = "0.24"
serde = { version = "1.0.144", features = ["derive"]}
serde_json = "1.0"
