[package]
name = "holidayapi_rust"
version = "0.1.1"
edition = "2021"
authors = ["TechTheAwesome <techtheawesome01@gmail.com>"]
license = "MIT"
keywords = ["client", "holiday", "holiday-api", "holidayapi", "api"]
description = "A HolidayAPI library for Rust"
readme = "README.md"
repository = "https://github.com/TechTheAwesome/holidayapi-rust"
categories = ["api-bindings", "asynchronous"]

[dependencies]
regex = "1.6.0"
reqwest = "0.11"
strum = "0.24"
strum_macros = "0.24"
serde = { version = "1.0.144", features = ["derive"]}
serde_json = "1.0"
log = "0.4.17"
